public class Lesson {

    private Teacher teacher;
    private String date;
    private Subject subject;

    Lesson(Teacher teacher, String date, Subject subject) {
        this.teacher = teacher;
        this.date = date;
        this.subject = subject;
    }

}
